# knowledge-management

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  api_server.py  pyproject.toml  requirements.txt
.claude/: settings.json
bookmarks/: bookmark_processor.py  cli.py  constants.py  listener.py  models.py  structured_output.py
bookmarks/processors/: __init__.py  arxiv.py  arxiv_test.py  base.py  default.py  twitter.py  youtube.py
bookmarks/utils/: doc_migration.py  images.py  llm.py  migrations.py  schema_creator.py  secret_creation.py
docs/superpowers/plans/: 2026-04-07-knowledge-listener-scope-reduction.md  2026-04-07-module-restructure-and-deployment.md  2026-04-07-repository-cleanup.md  2026-04-07-web-article-claude-handoff.md
docs/superpowers/specs/: 2026-04-07-knowledge-listener-scope-reduction-design.md  2026-04-07-module-restructure-and-deployment-design.md  2026-04-07-repository-cleanup-design.md  2026-04-07-web-article-claude-handoff-design.md
extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
journal/: 2026-04-07.md  2026-04-09.md  README.md
knowledge/: constants.py  listener.py  models.py  server.py
knowledge/processors/: twitter.py  webpage.py
knowledge/utils/: images.py  llm.py  migrations.py  urls.py
scripts/: cli.sh  com.wkerr.knowledge-listener.plist  com.wkerr.knowledge-server.plist  knowledge-listener.service  knowledge.service  run-with-env.sh
templates/: academic.md  article.md  paper.md  twitter.md  youtube.md
templates/prompts/: arxiv.md  default.md  youtube.md
tests/: test_api_server.py  test_webpage_processor.py
