[project]
name = "perpetua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.91.0",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "gunicorn>=20.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "markdownify>=1.2.2",
    "openai>=1.82.1",
    "peewee>=3.18.1",
    "pydantic>=2.11.5",
    "readabilipy>=0.3.0",
    "requests>=2.31.0",
    "tiktoken>=0.9.0",
    "watchdog>=6.0.0",
]

[tool.ruff]
line-length = 100
preview = true
fix = true

[tool.ruff.lint]
extend-select = ["I", "E501", "UP035", "PLC0415", "E402", "TID252"]

[tool.ruff.lint.isort]
force-single-line = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
